--- a/aws-auth-cm.yml
+++ b/aws-auth-cm.yml
@@ -1,9 +1,3 @@
-#!/bin/bash
-# See: https://docs.aws.amazon.com/eks/latest/userguide/add-user-role.html
-# See: https://docs.aws.amazon.com/eks/latest/userguide/launch-workers.html
-#       - Tab: Unmanaged nodes -> "To enable worker nodes to join your cluster"
-set -ex
-cat <<EOF > aws-auth-cm.yml
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -16,8 +10,8 @@ data:
         groups:
           - system:bootstrappers
           - system:nodes
-#     - rolearn: $ADMINISTRATOR_ROLE_ARN
-#       username: $ADMINISTRATOR_ROLE_ARN
+#     - rolearn: 
+#       username: 
 #       groups:
 #         - system:masters
 # mapUsers: |
@@ -29,5 +23,3 @@ data:
 #       username: ops-user
 #       groups:
 #         - system:masters
-EOF
-kubectl apply -f aws-auth-cm.yml
